fixed grid layout

--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,32 @@
 <div class="section">
     <div class="container">
         <div class="grid">
-            <div class="content-block about">
-
+            <div class="content-block about">   
+                <h2>1</h2>
             </div>
             <div class="content-block experience">
-                
+                <h2>2</h2>
             </div>
-            <div class="content-block three"></div>
-            <div class="content-block four"></div>
-            <div class="content-block five"></div>
+            <div class="content-block three">
+                <h2>3</h2>
+            </div>
+            <div class="content-block four">
+                <h2>4</h2>
+            </div>
+            <div class="content-block five">
+                <img src="/assets/images/placeholder.jpg" alt="">
+                <h2>5</h2>
+            </div>
+            <div class="content-block six">
+                <h2>6</h2>
+            </div>
+            <div class="content-block seven">
+                <h2>7</h2>
+            </div>
+            <div class="content-block eight">
+                <h2>8</h2>
+            </div>
+
 
         </div>
 
