added meta tags and deleted src folder

--- a/index.html
+++ b/index.html
@@ -1,62 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <title>Max Portfolio</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Nokora:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
     
+    
+    <title>Max Portfolio</title>
+    </head>
 
-<div class="top_nav">
-    <div class="left">
-        <h1>Maximilian Relam Wide</h1>
-    </div>
-
-    <div class="right">
-        <h3>Right side</h3>
-        <h3>Right Side</h3>
-    </div>
-</div>
-
-<div class="section">
-    <div class="container">
-        <div class="grid">
-            <div class="content-block about">   
-                <h2>1</h2>
-            </div>
-            <div class="content-block experience">
-                <h2>2</h2>
-            </div>
-            <div class="content-block three">
-                <h2>3</h2>
-            </div>
-            <div class="content-block four">
-                <h2>4</h2>
-            </div>
-            <div class="content-block five">
-                <img src="/assets/images/placeholder.jpg" alt="">
-                <h2>5</h2>
-            </div>
-            <div class="content-block six">
-                <h2>6</h2>
-            </div>
-            <div class="content-block seven">
-                <h2>7</h2>
-            </div>
-            <div class="content-block eight">
-                <h2>8</h2>
-            </div>
+<body>
 
 
+    <div class="top_nav">
+        <div class="left">
+            <h1>Maximilian Relam Wide</h1>
         </div>
 
+        <div class="right">
+            <h3>Right side</h3>
+            <h3>Right Side</h3>
+        </div>
     </div>
-</div>
+
+    <div class="section">
+        <div class="container">
+            <div class="grid">
+                <div class="content-block about">
+                    <div class="card-title">
+                        About me
+                    </div>
+                    <div class="intro">
+                        <img class="avatar" src="/assets/images/Avatar.svg" alt="">
+                        <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital
+                            design & digital media. I enjoy exploring what is unknown to me and finding new interests,
+                            which I believe gives me a greater understanding of the big picture.</p>
+                    </div>
+                    <div class="bonus-text">
+                        <p>Bonus text</p>
+                    </div>
+                </div>
+                <div class="content-block experience">
+                    <h2>2</h2>
+                </div>
+                <div class="content-block three">
+                    <h2>3</h2>
+                </div>
+                <div class="content-block four">
+                    <h2>4</h2>
+                </div>
+                <div class="content-block five">
+
+                    <h2>5</h2>
+                </div>
+                <div class="content-block six">
+                    <h2>6</h2>
+                </div>
+                <div class="content-block seven">
+                    <h2>7</h2>
+                </div>
+                <div class="content-block eight">
+                    <h2>8</h2>
+                </div>
+
+
+            </div>
+
+        </div>
+    </div>
 
 
 
