images link fix

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         About me
                     </div>
                     <div class="intro">
-                        <img class="avatar" src="/assets/images/Avatar.svg" alt="">
+                        <img class="avatar" src="assets/images/Avatar.svg" alt="">
                         <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital
                             design & digital media. I enjoy exploring what is unknown to me and finding new interests,
                             which I believe gives me a greater understanding of the big picture.</p>
