added experience card

--- a/index.html
+++ b/index.html
@@ -54,6 +54,81 @@
                     </div>
     
                     <div class="list">
+                        <div class="list-item">
+                            <div class="title">
+                                <p>UX/UI Designer</p>
+                            </div>
+                            <div class="list-row">
+                                <div class="left-title">
+                                    <p>Koalitionen</p>             
+                                </div>
+                                <div class="right-title">
+                                    <p>2021 – Present</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="list-item">
+                            <div class="title">
+                                <p>Title</p>
+                            </div>
+                            <div class="list-row">
+                                <div class="left-title">
+                                    <p>Subtitle</p>             
+                                </div>
+                                <div class="right-title">
+                                    <p>2021 – Present</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="list-item">
+                            <div class="title">
+                                <p>Title</p>
+                            </div>
+                            <div class="list-row">
+                                <div class="left-title">
+                                    <p>Subtitle</p>             
+                                </div>
+                                <div class="right-title">
+                                    <p>2021 – Present</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="list-item">
+                            <div class="title">
+                                <p>Title</p>
+                            </div>
+                            <div class="list-row">
+                                <div class="left-title">
+                                    <p>Subtitle</p>             
+                                </div>
+                                <div class="right-title">
+                                    <p>2021 – Present</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="list-item">
+                            <div class="title">
+                                <p>Last item</p>
+                            </div>
+                            <div class="list-row">
+                                <div class="left-title">
+                                    <p>Subtitle</p>             
+                                </div>
+                                <div class="right-title">
+                                    <p>2021 – Present</p>
+                                </div>
+                            </div>
+
+
+                        </div>
     
                     </div>
                 </div>
