fixed nav mobile

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         </div>
 
         <div class="right">
-            <h3>Right side</h3>
-            <h3>Right Side</h3>
+            <h3>Work</h3>
+            <h3>About</h3>
+            <h3>Contact</h3>
         </div>
     </div>
 
