--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="styles">
     <script src="/node_modules/feather-icons/dist/feather.js"></script>
     <script src="/index.js"></script>
 
@@ -202,21 +202,7 @@
 
 
                         </div>
-                        <div class="list-item">
-                            <div class="title">
-                                <p>Last item</p>
-                            </div>
-                            <div class="list-row">
-                                <div class="left-title">
-                                    <p>Subtitle</p>             
-                                </div>
-                                <button class="arrowBtn">
-                                    <i class="feather-16" data-feather="arrow-right"></i>
-                                </button>
-                            </div>
 
-
-                        </div>
     
                     </div>
                     
