--- a/index.html
+++ b/index.html
@@ -103,21 +103,7 @@
 
 
                         </div>
-                        <div class="list-item">
-                            <div class="title">
-                                <p>Title</p>
-                            </div>
-                            <div class="list-row">
-                                <div class="left-title">
-                                    <p>Subtitle</p>             
-                                </div>
-                                <div class="right-title">
-                                    <p>2021 – Present</p>
-                                </div>
-                            </div>
 
-
-                        </div>
                         <div class="list-item">
                             <div class="title">
                                 <p>Last item</p>
@@ -142,12 +128,12 @@
                         Work
                     </div>
                     <div class="list">
-                        <div class="list-item">
+                        <div class="list-item small">
                             <div class="title">
                                 <p>UX/UI Design</p>
                             </div>
                             <div class="list-row">
-                                <div class="left-title">
+                                <div class="left-title big">
                                     <p>Coop Insights</p>             
                                 </div>
                                 <button class="arrowBtn">
@@ -157,12 +143,12 @@
 
 
                         </div>
-                        <div class="list-item">
+                        <div class="list-item small">
                             <div class="title">
                                 <p>Title</p>
                             </div>
                             <div class="list-row">
-                                <div class="left-title">
+                                <div class="left-title big">
                                     <p>Subtitle</p>             
                                 </div>
                                 <button class="arrowBtn">
@@ -172,12 +158,12 @@
 
 
                         </div>
-                        <div class="list-item">
+                        <div class="list-item small">
                             <div class="title">
                                 <p>Title</p>
                             </div>
                             <div class="list-row">
-                                <div class="left-title">
+                                <div class="left-title big">
                                     <p>Subtitle</p>             
                                 </div>
                                 <button class="arrowBtn">
@@ -187,12 +173,12 @@
 
 
                         </div>
-                        <div class="list-item">
+                        <div class="list-item small">
                             <div class="title">
                                 <p>Title</p>
                             </div>
                             <div class="list-row">
-                                <div class="left-title">
+                                <div class="left-title big">
                                     <p>Subtitle</p>             
                                 </div>
                                 <button class="arrowBtn">
