added slideshow for clients

--- a/index.html
+++ b/index.html
@@ -211,11 +211,18 @@
                     <div class="card-title">
                         Featured Clients
                     </div>
-                    <div class="client-logos">
-                        <img src="assets/images/logoplaceholder.png" alt="Company">
-                        <img src="assets/images/logoplaceholder.png" alt="Company">
-                        <img src="assets/images/logoplaceholder.png" alt="Company">
-                        <img src="assets/images/logoplaceholder.png" alt="Company">
+                    <div class="client-logo-list">
+                        <div class="client-logo-track">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <!-- Duplicates for slideshow loop -->
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                        </div>
                     </div>
                 </div>
                 <div class="content-block expertise">
