started working on the about page git push git status

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="section">
         <div class="container">
-            <div class="grid">
+            <div class="grid grid-homepage">
                 
                 <div class="content-block about">
                     <div class="card-title">
