added word bounce

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="styles">
     <script src="/node_modules/feather-icons/dist/feather.js"></script>
-    <script src="/index.js"></script>
 
 
     
@@ -73,5 +72,23 @@
                 </div>
 
             </div>
+
+            <div class="wrapper">
+                <h2>things i like</h2>
+                <div class="bounce">
+                    <div class="word" id="word1">The Ocean</div>
+                    <div class="word" id="word2">Animals</div>
+                    <div class="word" id="word3">Music</div>
+                    <div class="word" id="word4">Mozzarella</div>
+                    <div class="word" id="word5">Making someone laugh</div>
+                    <div class="word" id="word6">Sunny days</div>
+                </div>
+            </div>
         </div>
     </div>
+
+
+<script src="/index.js"></script>
+</body>
+
+</html>
