--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="styles">
     <script src="/node_modules/feather-icons/dist/feather.js"></script>
-    <script src="/index.js"></script>
 
 
     
@@ -283,10 +282,7 @@
     </div>
 
 
-    <script>
-        feather.replace();
-      </script>
-
+<script src="index.js"></script>
       
 </body>
 
