--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <div class="right">
             <h3>Work</h3>
-            <h3>About</h3>
+            
+            <h3><a href="about.html">About</a></h3>
             <h3>Contact</h3>
         </div>
     </div>
