about image fix

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         <div class="right-text">
                             <p>
                                 After hours you can find me expanding my skills through various media,
-                                dabbling in photography, music, or recharging my spirit.
+                                dabbling in photography, music, or recharging my spirit by sungazing.
                             </p>
                             <button>Linkedin</button>
                         </div>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="wrapper">
-                <h2>things i like</h2>
+                <h2>Things that bring me joy</h2>
                 <div class="bounce">
                     <div class="word" id="word1">The Ocean</div>
                     <div class="word" id="word2">Animals</div>
@@ -82,6 +82,7 @@
                     <div class="word" id="word4">Mozzarella</div>
                     <div class="word" id="word5">Making someone laugh</div>
                     <div class="word" id="word6">Sunny days</div>
+                    <div class="word" id="word7">Isabelle 💌</div>
                 </div>
             </div>
         </div>
