added buttons + about responsiveness

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                                 After hours you can find me expanding my skills through various media,
                                 dabbling in photography, music, or recharging my spirit by sungazing.
                             </p>
-                            <button>Linkedin</button>
+                            <div><button class="button text-button bold-text">Linkedin</button></div>
                         </div>
 
                     </div>
@@ -75,6 +75,7 @@
 
             <div class="wrapper">
                 <h2>Things that bring me joy</h2>
+
                 <div class="bounce">
                     <div class="word" id="word1">The Ocean</div>
                     <div class="word" id="word2">Animals</div>
