--- a/about.html
+++ b/about.html
@@ -62,7 +62,11 @@
                                 After hours you can find me expanding my skills through various media,
                                 dabbling in photography, music, or recharging my spirit by sungazing.
                             </p>
-                            <div><button class="button text-button bold-text">Linkedin</button></div>
+                            <div>
+                                <a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">
+                                    <button class="button text-button bold-text">Linkedin</button>
+                                </a>
+                            </div>
                         </div>
 
                     </div>
