Started project template. Added about, contact, and work pages. Added section and section-image classes. Started using cursor ai to generate code, speed up development. I'll probably learn stuff faster this way.

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
 
     <div class="top_nav">
         <div class="left">
-            <h1>Maximilian Relam Wide</h1>
+            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
         </div>
 
         <div class="right">
-            <h3>Work</h3>
-            <h3> About</h3>
-            <h3>Contact</h3>
+            <h3><a href="work.html">Work</a></h3>
+            <h3><a href="about.html">About</a></h3>
+            <h3><a href="contact.html">Contact</a></h3>
         </div>
     </div>
 
@@ -39,8 +39,8 @@
                 <div class="bio">
                     <div class="intro">
                         <h2>
-                            I'm Max, a UX / UI designer based in Gothenburg, Sweden with a background in digital design
-                            & digital media. I enjoy exploring what is unknown to me and finding new interests, which I believe
+                            I'm Max, a UX / UI designer based in Gothenburg, Sweden with a background in digital design
+                            & digital media. I enjoy exploring what is unknown to me and finding new interests, which I believe
                             gives me a
                             greater understanding of the big picture.
                         </h2>
