--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <div class="top_nav">
         <div class="left">
-            <h1>Maximilian Relam Wide</h1>
+            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
         </div>
 
         <div class="right">
-            <h3>Work</h3>
+            <h3><a href="work.html">Work</a></h3>
             
             <h3><a href="about.html">About</a></h3>
-            <h3>Contact</h3>
+            <h3><a href="contact.html">Contact</a></h3>
         </div>
     </div>
 
@@ -46,7 +46,7 @@
                     <div class="intro">
                         <img class="avatar" src="assets/images/Avatar.svg" alt="">
                         <p>Hey there,
-                            I'm Maximilian. I generate ideas, design solutions & shape digital products.</p>
+                            I'm Maximilian. I generate ideas, design solutions & shape digital products.</p>
                     </div>
                     <div class="bonus-text">
                         <p class="secondary">Bonus text</p>
@@ -150,7 +150,7 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Subtitle</p>             
+                                    <p>Volvo</p>             
                                 </div>
                                 <button class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Subtitle</p>             
+                                    <p>Telia</p>             
                                 </div>
                                 <button class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
@@ -180,7 +180,7 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Subtitle</p>             
+                                    <p>Biljetter (to be added)</p>             
                                 </div>
                                 <button class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
@@ -261,7 +261,7 @@
                     </div>
                         <div class="links">
                             <p>CV</p>
-                            <p>Linkedin</p>
+                            <p><a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">Linkedin</a></p>
                         </div>
                     </div>
                 </div>
