Rough version of the project template is complete. Need to fix sizing and spacing etc

--- a/project-template.html
+++ b/project-template.html
@@ -42,7 +42,7 @@
                 <p style="font-size: var(--title---medium)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
 
-            <div class="hero-image">
+            <div class="hero-image shadow-default">
                 <img src="assets/images/abstract.jpeg" alt="Project Hero Image">
             </div>
 
@@ -62,9 +62,66 @@
                     <h1 style="font-size: var(--display---medium)">Section Heading</h1>
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <div class="section-image">
+                <div class="section-image shadow-default">
                     <img src="assets/images/abstract2.jpg" alt="Section Image">
                 </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="section">
+                <div class="section-header">
+                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
+                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                </div>
+                <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="image-grid">
+                    <div class="image-grid-item shadow-default">
+                        <img src="assets/images/abstract.jpeg" alt="Grid Image 1">
+                    </div>
+                    <div class="image-grid-item shadow-default">
+                        <img src="assets/images/abstract2.jpg" alt="Grid Image 2">
+                    </div>
+                    <div class="image-grid-item shadow-default">
+                        <img src="assets/images/abstract.jpeg" alt="Grid Image 3">
+                    </div>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="section">
+                <div class="section-header">
+                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
+                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                </div>
+                <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                <div class="stacked-images">
+                    <div class="stacked-image-item">
+                        <p class="nokora-light" style="font-size: var(--subheader)">Something related to the text below</p>
+                        <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <div class="section-image shadow-default">
+                            <img src="assets/images/abstract.jpeg" alt="Stacked Image 1">
+                        </div>
+                    </div>
+                    <div class="stacked-image-item">
+                        <p class="nokora-light" style="font-size: var(--subheader)">Something related to the text below</p>
+                        <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <div class="section-image shadow-default">
+                            <img src="assets/images/abstract2.jpg" alt="Stacked Image 2">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="section">
+                <div class="section-header">
+                    <p class="nokora-light" style="font-size: var(--subheader)">Outcome</p>
+                </div>
+                <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
     </div>
