--- a/volvo.html
+++ b/volvo.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="node_modules/feather-icons/dist/feather.js"></script>
-    <title>Project Title - Max Portfolio</title>
+    <title>Volvo - Max Portfolio</title>
 </head>
 
 <body>
@@ -38,18 +38,22 @@
             </div>
 
             <div class="project-header">
-                <h1 style="font-size: var(--display---large)">Project Title</h1>
-                <p style="font-size: var(--title---medium)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h1 style="font-size: var(--display---large)">PPO (Volvo Cars software) </h1>
+                <p style="font-size: var(--title---medium)">A strategic MVP redesign of Volvo's internal work system for planning car
+                    manufacturing schedules. The project focused on transforming key aspects of a
+                    complex legacy system into an intuitive, modern interface that aligns with
+                    Volvo's design principles while improving efficiency for global production
+                    teams.</p>
             </div>
 
             <div class="hero-image shadow-default">
-                <img src="assets/images/abstract.jpeg" alt="Project Hero Image">
+                <img src="assets/images/Volvo/Cover-Volvo.png" alt="Volvo Project Hero Image">
             </div>
 
             <div class="section">
                 <div class="section-header">
-                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
-                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                    <p class="nokora-light" style="font-size: var(--subheader)">Overview</p>
+                    <h1 style="font-size: var(--display---medium)">Project Context</h1>
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
@@ -58,12 +62,12 @@
 
             <div class="section">
                 <div class="section-header">
-                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
-                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                    <p class="nokora-light" style="font-size: var(--subheader)">Process</p>
+                    <h1 style="font-size: var(--display---medium)">Design Approach</h1>
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="section-image shadow-default">
-                    <img src="assets/images/abstract2.jpg" alt="Section Image">
+                    <img src="assets/images/volvo-process.jpg" alt="Volvo Design Process">
                 </div>
             </div>
 
@@ -71,19 +75,19 @@
 
             <div class="section">
                 <div class="section-header">
-                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
-                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                    <p class="nokora-light" style="font-size: var(--subheader)">Solution</p>
+                    <h1 style="font-size: var(--display---medium)">Final Design</h1>
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="image-grid">
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/abstract.jpeg" alt="Grid Image 1">
+                        <img src="assets/images/volvo-solution1.jpg" alt="Volvo Solution 1">
                     </div>
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/abstract2.jpg" alt="Grid Image 2">
+                        <img src="assets/images/volvo-solution2.jpg" alt="Volvo Solution 2">
                     </div>
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/abstract.jpeg" alt="Grid Image 3">
+                        <img src="assets/images/volvo-solution3.jpg" alt="Volvo Solution 3">
                     </div>
                 </div>
             </div>
@@ -92,24 +96,28 @@
 
             <div class="section">
                 <div class="section-header">
-                    <p class="nokora-light" style="font-size: var(--subheader)">Subheading</p>
-                    <h1 style="font-size: var(--display---medium)">Section Heading</h1>
+                    <p class="nokora-light" style="font-size: var(--subheader)">Implementation</p>
+                    <h1 style="font-size: var(--display---medium)">Technical Details</h1>
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                 <div class="stacked-images">
                     <div class="stacked-image-item">
-                        <p class="nokora-light" style="font-size: var(--subheader)">Something related to the text below</p>
-                        <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <div class="stacked-image-text">
+                            <p class="nokora-light" style="font-size: var(--subheader)">Technical Implementation</p>
+                            <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
                         <div class="section-image shadow-default">
-                            <img src="assets/images/abstract.jpeg" alt="Stacked Image 1">
+                            <img src="assets/images/volvo-tech1.jpg" alt="Technical Implementation">
                         </div>
                     </div>
                     <div class="stacked-image-item">
-                        <p class="nokora-light" style="font-size: var(--subheader)">Something related to the text below</p>
-                        <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <div class="stacked-image-text">
+                            <p class="nokora-light" style="font-size: var(--subheader)">User Testing</p>
+                            <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
                         <div class="section-image shadow-default">
-                            <img src="assets/images/abstract2.jpg" alt="Stacked Image 2">
+                            <img src="assets/images/volvo-tech2.jpg" alt="User Testing">
                         </div>
                     </div>
                 </div>
